  [**] Changes that requiring little or no modification to existing
       client code. 
 [***] Changes requiring important modifications to existing client code.

 ??, 2001
 
 - Release of version 1.2 (ALPHA)

 - Improved error reporting in DOMConfigurator. Thanks to Thomas Tuft
   Muller for contributing the enhancement. [*]
	
 - Log4j is now configurable using JMX. [*]

 - Added the FINE level as an alias for the DEBUG level to make migration
   from log4j to j.u.l. and vice versa easier. [*]

 - Modified SMTPAppender to allow multiple email sessions. Thanks to
   Jon Skeet for supplying the relevant patch. [*]

 - The CategoryFactory class has been replaced by the LoggerFactory
   class. The makeNewCategoryInstance method has been renamed as
   makeNewLoggerInstance. This change requires subclasses of Category
   classes to be modified and recompiled. [**]

 - The Level class replaced the Priority class. Priority class now
   extends Level to preserve backward compatibility. [*]

 - The Logger class replaced the Category class. Category class now
   extends Logger to preserve backward compatibility. [*]

 - The Category.assert method has been replaced by
   Category.assertLog.  This change was mecessary because assert is a
   language reserved word in JDK 1.4. [**]

 - Added buffered IO capability to FileAppender and subclasses. [*]

 - Added event reporting capability to the Hierachy class.
 
 - Added new system property "log4j.configuratorClass". This property
   allows the user to specify the custom configurator at the default
   initialization phase. This property replaces the previous
   interpretation of the reference part of "log4j.configuration" 
   as the custom configurator class. This interpretation was sometimes
   erroneous and caused headaches. [*]
   
 - Introduced the Mapped Diagnostic Context or MDC class. This class
   is similar to the NDC except that the diagnistic context is based