@@ -550,14 +550,14 @@ insightful.
 <li><p><a href="pub-support/MichaelChermside.html">Michael Chermside</a> 
 <li><p><a href="pub-support/EdoardoComar.html">Edoardo Comar</a> 
 <li><p><a href="pub-support/LeonardReinhart.html">Leonard Reinhart </a> 
-
-
+<li><p><a href="pub-support/JamesMaggs.html">James Maggs</a> 
+<li><p><a href="pub-support/AlexRojkov.html">Alex Rojkov</a> 
 
 <!--
 
 
-<li><p><a href="pub-support/.html"></a> 
-<li><p><a href="pub-support/.html"></a> 
+
+
 <li><p><a href="pub-support/.html"></a> 
 <li><p><a href="pub-support/.html"></a> 
 <li><p><a href="pub-support/.html"></a> 
